2001-11-14  Richard Sandiford  <rsandifo@redhat.com>

	* g++.dg/init/array2.C: New test.

2001-11-14  Alexandre Oliva  <aoliva@redhat.com>

	* gcc.c-torture/execute/20010122-1.c: Prevent unwanted inlining.

2001-11-13  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.dg/other/forscope1.C: New test.
	* g++.dg/ext/forscope1.C: New test.
	* g++.dg/ext/forscope2.C: New test.

2001-11-13  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/execute/20011113-1.c: New test.

2001-11-09  Geoffrey Keating  <geoffk@redhat.com>

	* gcc.c-torture/execute/20011109-2.c: New test.

	* gcc.c-torture/execute/20011109-1.c: New test.

2001-11-09  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/compile/20011109-1.c: New test.

2001-11-08  Geoffrey Keating  <geoffk@redhat.com>

	* g++.old-deja/g++.bugs/900227_01.C: Change stormy16 to xstormy16.
	* g++.old-deja/g++.eh/badalloc1.C: Change stormy16 to xstormy16.
	* g++.old-deja/g++.mike/ns15.C: Change stormy16 to xstormy16.
	* g++.old-deja/g++.pt/crash16.C: Change stormy16 to xstormy16.
	* gcc.c-torture/compile/961203-1.x: Change stormy16 to xstormy16.
	* gcc.c-torture/compile/980506-1.x: Change stormy16 to xstormy16.
	* gcc.c-torture/compile/990617-1.x: Change stormy16 to xstormy16.

2001-11-08  Neil Booth  <neil@daikokuya.demon.co.uk>

	* g++.dg/warn/Wshadow-1.C: New tests.
	* g++.old-deja/g++.mike/for3.C: Update.

2001-11-06  Joseph S. Myers  <jsm28@cam.ac.uk>

	* gcc.dg/c90-array-lval-1.c, gcc.dg/c90-array-lval-2.c,
	gcc.dg/c99-array-lval-1.c, gcc.dg/c99-array-lval-2.c: Remove
	XFAILs.  Adjust expected error texts.
	* gcc.c-torture/compile/20011106-1.c,
	gcc.c-torture/compile/20011106-2.c, gcc.dg/c90-array-lval-3.c,
	gcc.dg/c90-array-lval-4.c, gcc.dg/c90-array-lval-5.c,
	gcc.dg/c99-array-lval-3.c, gcc.dg/c99-array-lval-4.c,
	gcc.dg/c99-array-lval-5.c: New tests.

2001-11-05  Neil Booth  <neil@cat.daikokuya.demon.co.uk>

	* gcc.dg/cpp/defined.c: Update.

2001-11-04  Neil Booth  <neil@cat.daikokuya.demon.co.uk>
